--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@vercel/analytics": "^0.1.5",
     "axios": "^0.27.2",
     "framer-motion": "^10.12.8",
+    "he": "^1.2.0",
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
     "next": "12.2.3",
     "next-auth": "^4.17.0",
+    "next-seo": "^6.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-animated-text-content": "^1.0.1",
