--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-shimmer": "^3.2.0",
+    "react-slick": "^0.29.0",
     "react-social-login-buttons": "^3.6.1",
     "react-spreadsheet": "^0.7.7",
     "react-text-transition": "^3.0.2",
@@ -54,6 +55,7 @@
     "redux-thunk": "^2.4.1",
     "rsuite": "^5.24.1",
     "scheduler": "^0.23.0",
+    "slick-carousel": "^1.8.1",
     "vara": "^1.4.1"
   },
   "devDependencies": {
