--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
+    "react-ga": "^3.3.1",
     "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
